# Bitfoot

./: Bitfoot.pro  CMakeLists.txt  README.md  epd.pri  gitrev.pri  init.cmake
epd/: perftsuite.epd  pnr.epd  slav.epd  test.epd
senjo/: CMakeLists.txt  ChessEngine.h  Platform.h  Threading.cpp  Threading.h  UCIAdapter.cpp
src/: Bitfoot.cpp  Bitfoot.h  CMakeLists.txt  Defs.h  Diff.h  HashTable.cpp  HashTable.h  Move.h  Stats.cpp  Stats.h  main.cpp
src/senjo/: CMakeLists.txt
